<?xml version="1.0"?>
<package format="3">
  <name>panda_planner</name>
  <version>0.0.1</version>
  <description>MoveIt2 planner node for Panda arm</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>

